# aya-temp

./: Cargo.toml  README.md
.vim/: coc-settings.json
git-clone-detect/: Cargo.toml
git-clone-detect-common/: Cargo.toml
git-clone-detect-ebpf/: Cargo.toml
git-clone-detect-ebpf/src/: main.rs
git-clone-detect/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
