[package]
name = "git-clone-detect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# aya = { version = ">=0.11", features=["async_tokio"] }
# aya-log = "0.1"
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
clap = { version = "4.1", features = ["derive"] }
git-clone-detect-common = { path = "../git-clone-detect-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "git-clone-detect"
path = "src/main.rs"
